# vela

./: .gitignore  CMakeLists.txt  ConditionTree.h  README.md  RUN_IT.md  binary_design.md  rule.h
.github/workflows/: c-cpp.yml  release.yml
bench/: CMakeLists.txt  bench.c  bench.h  bench_compare.c  bench_engine.c  bench_incremental.c  bench_memory.c  bench_thread.c  bench_vm.c  gen_rules.py  plot.py
bench/results/: bench_results.json
include/: ActionEntry.h  ActionEntry_internal.h  ConditionTree.h  bytecode.h  common.h  engine.h  engine_internal.h  errors.h  factdb.h  factdb_internal.h  jsonParser.h  lexer.h  parser_engine.h  rule.h  rule_internal.h  semanticChecker.h
results/: bench_results.json
src/: ActionEntry.c  ActionEntry.h  ConditionTree.c  ConditionTree.h  arena.c  arena.h  bytecode.c  common.h  engine.c  engine.h  factdb.c  factdb.h  jsonParser.c  jsonParser.h  lexer.c  lexer.cpp  lexer.h  rule.c  rule.h  semanticChecker.c  semanticChecker.h  test.json  testFuncs.c
src/engine/: ActionEntry.c  ConditionTree.c  arena.c  bytecode.c  engine.c  factdb.c  parser_engine.c  readBin.c  rule.c  semanticChecker.c  testFuncs.c
src/velang/: ast.ts  lexer.ts  package.json  parser.ts  test.ts  test.vela  test.velabc  toBytecode.ts  tsconfig.json  vela.ts  velang.ts
test/: greatest.h  test.ts  test1.velabc  test1.velang  testRunner.c  testRunner1.c  unit_test.c  unit_tests.c
